Fix mobile top menu jumping problem on scrolling (#223)

--- a/web/assets/css/common.css
+++ b/web/assets/css/common.css
@@ -64,9 +64,13 @@ html {
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .nm_header.fixed #sticky-wrap .nav--menu .logo {
     margin-left: 0;
+  }
+
+  .nm_header .index-logo {
+    display: none;
   }
 }
 
@@ -452,6 +456,17 @@ a {
 
 .nm_header.fixed .sticky-placeholder {
   display: block;
+}
+
+@media (max-width: 767px) {
+  .nm_header .sticky-placeholder {
+    display: none;
+  }
+
+  .nm_header #sticky-wrap .nav {
+    position: fixed;
+    top: 0;
+  }
 }
 
 .nav--menu ul {
